--- a/PolyCore.cabal
+++ b/PolyCore.cabal
@@ -6,12 +6,12 @@ cabal-version: 1.12
 
 name:           PolyCore
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/PolyCore#readme>
-homepage:       https://github.com/githubuser/PolyCore#readme
-bug-reports:    https://github.com/githubuser/PolyCore/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2022 Author name here
+description:    Please see the README on GitHub at <https://github.com/QLambda/PolyCore#README.md>
+homepage:       https://github.com/QLambda/PolyCore#readme
+bug-reports:    https://github.com/QLambda/PolyCore/issues
+author:         Ruben Marcelo Caro
+maintainer:     mcaro@gmail.com.com
+copyright:      2022 Ruben Marcelo Caro
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/PolyCore
+  location: https://github.com/QLambda/PolyCore
 
 library
   exposed-modules:
@@ -56,5 +56,6 @@ test-suite PolyCore-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       PolyCore
+    , QuickCheck
     , base >=4.7 && <5
   default-language: Haskell2010
