--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                PolyCore
 version:             0.1.0.0
-github:              "githubuser/PolyCore"
+github:              "QLambda/PolyCore"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2022 Author name here"
+author:              "Ruben Marcelo Caro"
+maintainer:          "mcaro@gmail.com.com"
+copyright:           "2022 Ruben Marcelo Caro"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/PolyCore#readme>
+description:         Please see the README on GitHub at <https://github.com/QLambda/PolyCore#README.md>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -46,3 +46,4 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - PolyCore
+    - QuickCheck
